--- a/manuscripts/24-accepted-ehs/part-1-dags/part-1-dags.qmd
+++ b/manuscripts/24-accepted-ehs/part-1-dags/part-1-dags.qmd
@@ -42,6 +42,7 @@ execute:
   include: true
   eval: true
 fontfamily: libertinus
+pdf-engine: lualatex
 bibliography: /Users/joseph/GIT/templates/bib/references.bib
 csl: /Users/joseph/GIT/templates/csl/apa-7.csl
 ---
