--- a/manuscripts/24-accepted-ehs/part-1-dags/s1-part-1-dags.qmd
+++ b/manuscripts/24-accepted-ehs/part-1-dags/s1-part-1-dags.qmd
@@ -39,6 +39,7 @@ execute:
   warning: false
   include: true
   eval: true
+pdf-engine: lualatex
 fontfamily: libertinus
 bibliography: /Users/joseph/GIT/templates/bib/references.bib
 csl: /Users/joseph/GIT/templates/csl/apa-7.csl
