--- a/manuscripts/24-accepted-ehs/part-2-time-varying/part-2-time-varying.qmd
+++ b/manuscripts/24-accepted-ehs/part-2-time-varying/part-2-time-varying.qmd
@@ -4,6 +4,7 @@ abstract: |
  The analysis of 'moderation', 'interaction', 'mediation', and 'longitudinal growth' is widespread in the human sciences, yet subject to confusion. To clarify these concepts, it is essential to state causal estimands, which requires specifying counterfactual contrasts for a target population on an appropriate scale. Once causal estimands are defined, we must consider their identification. I employ causal directed acyclic graphs (causal DAGs) and Single World Intervention Graphs to elucidate identification workflows. I show that when multiple treatments exist, common methods for statistical inference, such as multi-level regressions and statistical structural equation models, cannot typically recover the causal quantities we seek. By properly framing and addressing causal questions of interaction, mediation, and time-varying treatments, we can expose the limitations of popular methods and guide researchers to a clearer understanding of the phenomena that animate our interests.
  
  **KEYWORDS**: *DAGs*; *Mediation*; *Moderation*; *SWIGs*; *Time-varying Treatments*
+
 author: 
   - name: Joseph A. Bulbulia
     affiliation: Victoria University of Wellington,  NEW ZEALAND
@@ -36,6 +37,7 @@ format:
     header-includes:
       - \input{/Users/joseph/GIT/latex/latex-for-quarto.tex}
 date: last-modified
+pdf-engine: lualatex
 execute:
   echo: false
   warning: false
