--- a/manuscripts/24-accepted-ehs/part-2-time-varying/s1-part-2-time-vary.qmd
+++ b/manuscripts/24-accepted-ehs/part-2-time-varying/s1-part-2-time-vary.qmd
@@ -34,6 +34,7 @@ format:
     header-includes:
       - \input{/Users/joseph/GIT/latex/latex-for-quarto.tex}
 date: last-modified
+pdf-engine: lualatex
 execute:
   echo: false
   warning: false
