--- a/manuscripts/24-accepted-ehs/part-3-measurement/part-3-measurement-validity.qmd
+++ b/manuscripts/24-accepted-ehs/part-3-measurement/part-3-measurement-validity.qmd
@@ -1,12 +1,13 @@
 ---
 title: 'Methods in Causal Inference Part 3: Measurement Error and External Validity Threats'
 abstract: |
-    The human sciences should seek generalisations wherever possible. For ethical and scientific reasons, it is desirable to sample more broadly than ‘Western, Educated, Industrialised, Rich, and Democratic’ (WEIRD) societies. However, restricting the target population is sometimes necessary; for example, young children should not be recruited for studies on elderly care. Under which conditions is unrestricted sampling desirable or undesirable? Here, we use causal diagrams to clarify the structural features of measurement error bias and target population restriction bias (or 'selection restriction'), focusing on issues in comparative cultural research. We define any study exhibiting such biases, or confounding biases, as **weird** (**w**rongly **e**stimated inferences due to **i**nappropriate **r**estriction and **d**istortion). We explain why statistical tests such as configural, metric, and scalar invariance cannot address the structural biases of **weird** studies. Overall, we examine how the workflows for causal inference provide the necessary preflight checklists for ambitious, effective, and safe comparative cultural research.
+    The human sciences should seek generalisations wherever possible. For ethical and scientific reasons, it is desirable to sample more broadly than ‘Western, Educated, Industrialised, Rich, and Democratic’ (WEIRD) societies. However, restricting the target population is sometimes necessary; for example, young children should not be recruited for studies on elderly care. Under which conditions is unrestricted sampling desirable or undesirable? Here, we use causal diagrams to clarify the structural features of measurement error bias and target population restriction bias (or 'selection restriction'), focusing on threats to valid causal inference that arise in comparative cultural research. We define any study exhibiting such biases, or confounding biases, as **weird** (**w**rongly **e**stimated inferences due to **i**nappropriate **r**estriction and **d**istortion). We explain why statistical tests such as configural, metric, and scalar invariance cannot address the structural biases of **weird** studies. Overall, we examine how the workflows for causal inference provide the necessary preflight checklists for ambitious, effective, and safe comparative cultural research.
     
     **KEYWORDS**: *Causal Inference*; *Comparative*; *Cross-Cultural*; *DAGs*; *Experiments*; *Longitudinal*;  *Measurement Error Bias**; **Selection Bias*; *Single World Intervention Graphs*, *SWIGs*, *Target Validity*; *WEIRD*
+
 author: 
   - name: Joseph A. Bulbulia
-    affiliation: Victoria University of Wellington, New Zealand
+    affiliation: Victoria University of Wellington,  NEW ZEALAND
     orcid: 0000-0002-5861-2056
     email: joseph.bulbulia@vuw.ac.nz
     corresponding: no
@@ -36,8 +37,9 @@ format:
     header-includes:
       - \input{/Users/joseph/GIT/latex/latex-for-quarto.tex}
 date: last-modified
+pdf-engine: lualatex
 execute:
-  echo: true
+  echo: false
   warning: false
   include: true
   eval: true
@@ -192,9 +194,9 @@ $$
 
 where: 
 
-- $Y_i$ is the observed outcome for individual $i$; 
-- $A_i$ is the treatment status for individual $i$, with $A_i = 1$ indicating treatment received and $A_i = 0$ indicating no treatment; 
-- $Y_i(1)$ and $Y_i(0)$ are the potential outcomes for individual $i$ under treatment and no treatment, respectively (refer to @morgan2014; @vanderweele2009).
+- $Y_i$ denotes the observed outcome for individual $i$; 
+- $A_i$ denotes the treatment status for individual $i$, with $A_i = 1$ indicating treatment received and $A_i = 0$ indicating no treatment; 
+- $Y_i(1)$ and $Y_i(0)$ denote the potential outcomes for individual $i$ under treatment and no treatment, respectively (refer to @morgan2014; @vanderweele2009).
 
 The causal consistency assumption is necessary to link the theoretical concept of potential outcomes — the target quantities of interest — with observable data (see @bulbulia2023a).
 
@@ -208,16 +210,16 @@ $$
 
 where:
 
-- $Y(a)$ represents the potential outcomes for a particular treatment level $a$.
+- $Y(a)$ denotes the potential outcomes for a particular treatment level $a$.
 - $\coprod$ denotes conditional independence.
-- $A$ represents the treatment levels to be contrasted.
-- $L$ represents the measured covariates.
+- $A$ denotes the treatment levels to be contrasted.
+- $L$ denotes the measured covariates.
 
 Under the conditional exchangeability assumption, any differences in outcomes between treatment groups can be attributed to the treatment. This assumption requires that all confounding variables affecting both the treatment assignment $A$ and the potential outcomes $Y(a)$ are measured and included in $L$.
 
 #### Assumption 3. Positivity
 
-The positivity assumption requires that every individual in the population has a non-zero probability of receiving each treatment level, given their covariates. Formally,
+The positivity assumption requires that every individual in the population has a non-zero probability of receiving each treatment level, given their covariates [@westreich2010; @chatton2020; @hernan2024WHATIF; @bulbulia2023a]. Formally,
 
 $$
 0 < Pr(A = a | L = l) < 1, \quad \forall a \in A, \, \forall l \in L \, \text{ such that } \, Pr(L = l) > 0
@@ -225,10 +227,9 @@ $$
 
 where: 
 
-- $A$ is the treatment or exposure variable. 
-- $L$ is a vector of covariates assumed sufficient for satisfying conditional exchangeability.  
+- $A$ denotes the treatment or exposure variable. 
+- $L$ denotes a vector of covariates assumed sufficient for satisfying conditional exchangeability.  
 
-The positivity assumption requires that every individual has a non-zero chance of receiving each treatment across all covariates in $L$ [@westreich2010; @chatton2020; @hernan2024WHATIF; @bulbulia2023a]. 
 For a discussion of causal assumptions in relation to external validity, refer to @imai2008misunderstandings.
 
 
@@ -302,7 +303,7 @@ For discussion of these concepts refer to @dahabreh2021study; @imai2008misunders
 
 - **$\mathbf{\mathcal{R}}$**: Denotes randomisation to treatment condition $\big(\mathcal{R} \rightarrow A\big)$.
 
-- **Node**: Represents characteristics or features of units within a population on a causal diagram — that is, a 'variable'. In causal directed acyclic graphs, nodes are drawn with respect to the *target population*, which is the population for whom investigators seek causal inferences [@suzuki2020]. Time-indexed nodes: $X_t$ denotes relative chronology.
+- **Node**: denotes characteristics or features of units within a population on a causal diagram — that is, a 'variable'. In causal directed acyclic graphs, nodes are drawn with respect to the *target population*, which is the population for whom investigators seek causal inferences [@suzuki2020]. Time-indexed nodes: $X_t$ denotes relative chronology.
 
 - **Edge without an Arrow** ($\association$): Path of association, causality not asserted.
 
@@ -398,7 +399,7 @@ Understanding the structural features of measurement error bias will help us und
 
 @tbl-terminologymeasurementerror $\mathcal{G}_1$ illustrates uncorrelated non-differential measurement error under the 'sharp-null,' which arises when the error terms in the exposure and outcome are independent. In this setting, the measurement error structure is not expected to produce bias.
 
-For example, consider a study investigating the causal effect of beliefs in big Gods on social complexity in ancient societies. Imagine that societies either randomly omitted or inaccurately recorded details about their beliefs in big Gods and their social complexities. This might occur because of varying preservation in the records of cultures which is unrelated to the actual beliefs or social complexity. In this scenario, we imagine the errors in historical records for beliefs in big Gods and for social complexity are independent. When the treatment is randomised, uncorrelated and undirected errors will generally not introduce bias *under the sharp null of no treatment effect for any unit* when all backdoor paths are closed. However, if confounders are measured without error this may open a backdoor path from treatment to outcome. For example, @robins2004effects p.2216 discusses how in non-experimental settings, mismeasured confounders can introduce bias even when the measurement errors of the treatment and outcome are uncorrelated and undirected and there is no treatment effect. This is because mismeasured confounders will not control for confounding bias. We present an illustration of this bias in @tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_6$, where we discuss challenges to comparative research in which the accuracy of confounder measurements varies across the sites to be compared.
+For example, consider a study investigating the causal effect of beliefs in big Gods on social complexity in ancient societies. Imagine that societies either randomly omitted or inaccurately recorded details about their beliefs in big Gods and their social complexities. This might occur because of varying preservation in the records of cultures which is unrelated to the actual beliefs or social complexity. In this scenario, we imagine the errors in historical records for beliefs in big Gods and for social complexity are independent. When the treatment is randomised, uncorrelated and undirected errors will generally not introduce bias *under the sharp null of no treatment effect for any unit* when all backdoor paths are closed. However, if confounders are measured without error this may open a backdoor path from treatment to outcome. For example, @robins2008estimation p.2216 discusses how in non-experimental settings, mismeasured confounders can introduce bias even when the measurement errors of the treatment and outcome are uncorrelated and undirected and there is no treatment effect. This is because mismeasured confounders will not control for confounding bias. We present an illustration of this bias in @tbl-terminologyselectionrestrictionbaseline $\mathcal{G}_6$, where we discuss challenges to comparative research in which the accuracy of confounder measurements varies across the sites to be compared.
 
 
 ### Example 2:  Uncorrelated Non-Differential Errors 'Off The Null' (True Treatment Effect) Biases True Effects toward the Null
@@ -740,63 +741,58 @@ We begin by using Single World Intervention Graphs to Clarify sources of bias in
 
 ## Conclusions
 
-In causal inference, we begin by specifying clearly defined treatments and outcomes, stating the contrasts to be made for interventions at specific levels of treatment, and identifying a target population for whom results generalise. Although causal inference is gaining popularity, much work remains in considering its relevance to evaluating common threats posed by measurement error bias and target population-restriction bias to causal inferences. These threats are particularly evident in the comparative human sciences, where both incongruent measurements and incongruent human realities may imperil causal inferences.  Moreover, we have considered how biases arising from target-population restriction at the beginning and end of a study may be approached as varieties of measurement-error bias. Furthermore, using Single World Intervention Graphs (SWIGs), we have clarified that structural features of uncorrelated and undirected measurement error bias arise either because treatment reporters are the common effects of unmeasured treatments and (typically) unmeasured sources of treatment measurement error, or because there is effect modification of the unmeasured sources of measurement error on reporters of outcomes. Lacking structural assumptions, statistical tests will not detect these biases. However, it may be possible to correct for these biases, again under structural assumptions that we do not obtain from the data alone, see supplementary materials **S2** and **S5**.
+In causal inference, we start by clearly defining treatments and outcomes and specifying contrasts for hypothetical interventions on a specific scale (such as the additive scale) across a well-defined target population. We then evaluate the prospects for identifying these causal effect estimates on the **full data** — the entire counterfactual dataset where the population is simultaneously observed under each intervention to be contrasted. Obtaining valid contrasts requires that we consider sources of measurement error, and target population restriction bias (also known as 'selection bias') -- biases that may arise in the absence of confounding by a common cause of the treatment and outcome. Although causal inference is gaining popularity, there is considerable scope to improve habits of reflecting on the threats to valid inference that measurement error bias and target population-restriction bias present. We have considered how these threats become evident in the comparative human sciences, and furthermore, how target population-restriction biases often take the form of measurement error bias. Although Single World Intervention Graphs (SWIGs) were developed to evaluate the conditional exchangeability assumption, they also clarify the diagnosis of structural sources of measurement error bias. We have considered more generally that lacking structural assumptions -- that is causal assumptions -- statistical tests alone are insufficient for diagnosing the implications of measurement error biases, which may be directed, correlated, both directed and correlated, or undirected and uncorrelated. Whether and how we may correct for measurement-error biases requires structural assumptions that we do not obtain from the data alone, refer to supplementary materials **S2** and **S5**.
 
-Nothing I have said here should detract from the importance of seeking species-level knowledge. We should seek such knowledge. Science should seek generalisations where it can because generalisation is knowledge. In my view, there are also ethical reasons -- a great many populations remain understudied. However, before investigators venture into the vast wildernesses of human existence, locally-understood gardens must be cultivated. A long shadow of measurement error bias casts its shade over nearly every aspect of the human condition that scientists hope to understand. Not that such problems remain even if adequate samples are taken from truly global populations [a problem discussed in @ghai2024big]. However, the standard workflow for causal inference offers guidance for research design, whether or not the causal questions are comparative because causality itself is inescapably general.
-
-### Schematic Workflow For Avoiding weird Causal Inferences
-
-We avoid **weird** (**w**rongly **e**stimated inferences due to **i**nappropriate **r**estriction and **d**istortion) inferences in comparative research in the same way that we avoid **weird** inferences in any research by undertaking the following steps:
+Nothing I have said here should detract from the importance of seeking species-level knowledge. We should seek such knowledge. Science should seek generalisations where it can because generalisation is knowledge. In my view, there are also ethical reasons -- a great many populations remain understudied; where there are no scientific reasons for restriction, where a valid target population can be stated for a cross-cultural sample, and where costs permit, we should seek wider samples. Here, we have considered that problems of measurement-error bias remain even if adequate samples are taken from broader  populations. To put the point metaphorically, before investigators venture into the vast wildernesses of human existence, locally-understood gardens of human existence must be cultivated. Because a long shadow of measurement error bias casts its shade over nearly every aspect of the human condition that scientists hope to understand, locally-understood gardens of human existence remain largely uncultivated. The good news is that standard workflows for causal inference offer investigators generic guidance. We avoid **weird** (**w**rongly **e**stimated inferences due to **i**nappropriate **r**estriction and **d**istortion) inferences in comparative research in the same way that we avoid **weird** inferences in any research by undertaking the following steps:
 
 1. **State a well-defined intervention.**
 
-Clearly define the treatment or exposure to be evaluated. Of which events do we hope to infer consequences?  Which levels of intervention will be compared? 
+Clearly define the treatment or exposure to be evaluated. For which exposures do we hope to infer consequences?  Which levels of the exposure shall we compare? Why these levels and not others?  
 
 2. **State a well-defined outcome.**
 
-Clearly define the outcome to be evaluated. Which consequences are of interest? Which comparisons will be made? At which time scale are we interested? At which scale of causal contrast are we interested? 
+Clearly define the outcome to be evaluated. Which consequences are of interest? Which comparisons will be made? At which time scale following exposure are we interested in evaluating outcomes? At which scale of causal contrast are we interested? 
 
 3. **Clarify the target population.**
 
-Define the population to whom the results will generalise, understanding that causal contrasts may differ for different populations, even in the absence of confounding or measurement error biases.
+Use eligibility criteria to define the population to whom the results are meant to generalise, understanding that causal contrasts may differ for different populations, even in the absence of confounding or measurement error biases [@hernan2016].
 
 4. **Ensure treatments to be compared satisfy causal consistency.**
 
-Verify that the treatments correspond to interpretable interventions [@hernan2024WHATIF]
+Verify that the treatments correspond to interpretable interventions [@hernan2024WHATIF]. Satisfying the causal consistency assumption is a necesary condition for valid causal inference.
+
 
 5. **Evaluate whether treatment groups, conditional on measured covariates, are exchangeable.**
 
-Balancing confounding covariates across treatment levels ensures that differences between groups are conditionally 'ignorable', or equivalently, are conditionally exchangeable, or equivalently, that all backdoor paths have been closed.
+Balancing confounding covariates across treatment levels ensures that differences between groups are 'ignorable', or equivalently, are conditionally exchangeable, or equivalently, that all backdoor paths have been closed, or equivalently that the treatment and outcome are d-separated. Ensuring that confounders are balanced in the treatments to be compared is a necessary condition for valid causal inference.
 
 6. **Check if the positivity assumption is satisfied.**
 
-Confirm that all individuals have a non-zero probability of receiving each treatment level, given their covariates. 
+Confirm that all individuals in the target population have a non-zero probability of receiving each treatment level, given their covariates. Satisfying the positivity assumption is a necesary condition for valid causal inference.
 
 7. **Ensure that the measures relate to the scientific questions at hand.**
 
-Ensure that the data collected and the measures used directly relate to the research question. As part of this, evaluate structural features of measurement error bias. As we have considered, there are manifold possibilities for measurement error bias to obscure the phenomena under study, and these biases may interact with target-population-restriction biases.
+Ensure that the data collected and the measures used directly relate to the research question to hand. As part of this, evaluate structural features of measurement error bias. As we have considered, there are manifold possibilities for measurement error bias to obscure the phenomena under study and bias results. For example target-population-restriction biases manifest as measurement error biases where inferences for the analytic sample population differ from inferences for the target population.
 
-8. **Consider strategies to ensure the study group measured at the end of the study represents the target population.**
+8. **Consider strategies to ensure the analytic sample measured at the end of the study represents the target population.**
 
-If the study population at both the beginning and end of treatment differs in the distribution of variables that modify the effect of a treatment on the outcome, the study will be biased in at least one measure of effect. 
+If the distribution of effect modifiers in the study population at the end of treatment differs from the distribution of effect modifiers in target population, the study will be biased in at least one measure of effect. 
 
 9. **Clearly communicate the reasoning, evidence, and decision-making that inform steps 1-8.**
 
-Provide transparent and thorough documentation of how steps 1-8 have been made. This includes detailing the assumptions, methods, and decisions. Prepare to conduct and report multiple analyses where analytic decisions are ambiguous.
+Provide transparent and thorough documentation of how steps 1-8 have been made. This includes stating investigator assumptions, disagreements, and decisions. Prepare to conduct and report multiple analyses where causal assumptions are debated or ambiguous [@bulbulia2023].
 
-We have seen that the demands of following this workflow in comparative research are more stringent because measurement error bias must be evaluated at every site to be compared. Heterogeneity in measurement error can open biasing paths, and the target populations may not be easily defined, sampled, or—where the scientific question requires— appropriately restricted. Methodologists broadly agree on these points, but they can easily forget them. We have shown how workflows for causal inference act as essential preflight checklists for ambitious, effective, and safe comparative cultural research. These workflows help propel science forward without overreaching.
-
-{{< pagebreak >}}
+We have seen that the demands of following this workflow in comparative research are more stringent because measurement error biases must be evaluated at every site to be compared. Correlated and directed structures of measurement error bias can distort treatment effect estimates for the broader target population. More fundamentally, the target population in comparative research may not be easily defined, sampled, or, when required by the scientific question, appropriately restricted. Methodologists broadly agree on these points but can easily forget them [as discussed in @ghai2024big]. We have shown how workflows for causal inference act as essential preflight checklists for ambitious, effective, and safe comparative cultural research. These workflows help propel the human sciences forward without overreaching.
 
 ## Acknowledgements
 
-I am grateful to Dr. Inkuk Kim for checking previous versions of this manuscript and offering feedback, to two anonymous reviewers and the editors, to Robert Ross for suggesting references I'd missed, and to Charles Efferson and Ruth Mace, for their constructive feedback. 
+I am grateful to Dr. Inkuk Kim for checking previous versions of this manuscript and offering feedback, to two anonymous reviewers and the editors, to Robert Ross for suggesting references I had missed, and to Charles Efferson and Ruth Mace, for their constructive feedback. 
 
 Any remaining errors are my own.
 
 ## Conflict of Interest
 
-The author declares no conflicts of interest
+The author declares no conflict of interest.
 
 
 ## Financial Support
