--- a/manuscripts/24-accepted-ehs/part-3-measurement/part-3-measurement-validity.tex
+++ b/manuscripts/24-accepted-ehs/part-3-measurement/part-3-measurement-validity.tex
@@ -205,13 +205,13 @@ External Validity Threats}
 
   \author{Joseph A. Bulbulia}
             \affil{%
-             \small{     Victoria University of Wellington, New Zealand
+             \small{     Victoria University of Wellington, NEW ZEALAND
           ORCID \textcolor[HTML]{A6CE39}{\aiOrcid} ~0000-0002-5861-2056 }
               }
       
 
 
-\date{2024-06-19}
+\date{2024-06-20}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -223,16 +223,16 @@ necessary; for example, young children should not be recruited for
 studies on elderly care. Under which conditions is unrestricted sampling
 desirable or undesirable? Here, we use causal diagrams to clarify the
 structural features of measurement error bias and target population
-restriction bias (or `selection restriction'), focusing on issues in
-comparative cultural research. We define any study exhibiting such
-biases, or confounding biases, as \textbf{weird} (\textbf{w}rongly
-\textbf{e}stimated inferences due to \textbf{i}nappropriate
-\textbf{r}estriction and \textbf{d}istortion). We explain why
-statistical tests such as configural, metric, and scalar invariance
-cannot address the structural biases of \textbf{weird} studies. Overall,
-we examine how the workflows for causal inference provide the necessary
-preflight checklists for ambitious, effective, and safe comparative
-cultural research.
+restriction bias (or `selection restriction'), focusing on threats to
+valid causal inference that arise in comparative cultural research. We
+define any study exhibiting such biases, or confounding biases, as
+\textbf{weird} (\textbf{w}rongly \textbf{e}stimated inferences due to
+\textbf{i}nappropriate \textbf{r}estriction and \textbf{d}istortion). We
+explain why statistical tests such as configural, metric, and scalar
+invariance cannot address the structural biases of \textbf{weird}
+studies. Overall, we examine how the workflows for causal inference
+provide the necessary preflight checklists for ambitious, effective, and
+safe comparative cultural research.
 
 \textbf{KEYWORDS}: \emph{Causal Inference}; \emph{Comparative};
 \emph{Cross-Cultural}; \emph{DAGs}; \emph{Experiments};
@@ -535,12 +535,13 @@ where:
 \begin{itemize}
 \tightlist
 \item
-  \(Y_i\) is the observed outcome for individual \(i\);
+  \(Y_i\) denotes the observed outcome for individual \(i\);
 \item
-  \(A_i\) is the treatment status for individual \(i\), with \(A_i = 1\)
-  indicating treatment received and \(A_i = 0\) indicating no treatment;
+  \(A_i\) denotes the treatment status for individual \(i\), with
+  \(A_i = 1\) indicating treatment received and \(A_i = 0\) indicating
+  no treatment;
 \item
-  \(Y_i(1)\) and \(Y_i(0)\) are the potential outcomes for individual
+  \(Y_i(1)\) and \(Y_i(0)\) denote the potential outcomes for individual
   \(i\) under treatment and no treatment, respectively (refer to Morgan
   \& Winship (\citeproc{ref-morgan2014}{2014}); VanderWeele
   (\citeproc{ref-vanderweele2009}{2009})).
@@ -569,14 +570,14 @@ where:
 \begin{itemize}
 \tightlist
 \item
-  \(Y(a)\) represents the potential outcomes for a particular treatment
+  \(Y(a)\) denotes the potential outcomes for a particular treatment
   level \(a\).
 \item
   \(\coprod\) denotes conditional independence.
 \item
-  \(A\) represents the treatment levels to be contrasted.
+  \(A\) denotes the treatment levels to be contrasted.
 \item
-  \(L\) represents the measured covariates.
+  \(L\) denotes the measured covariates.
 \end{itemize}
 
 Under the conditional exchangeability assumption, any differences in
@@ -589,7 +590,10 @@ measured and included in \(L\).
 
 The positivity assumption requires that every individual in the
 population has a non-zero probability of receiving each treatment level,
-given their covariates. Formally,
+given their covariates (\citeproc{ref-bulbulia2023a}{Bulbulia et al.,
+2023}; \citeproc{ref-chatton2020}{Chatton et al., 2020};
+\citeproc{ref-hernan2024WHATIF}{Hernan \& Robins, 2024};
+\citeproc{ref-westreich2010}{Westreich \& Cole, 2010}). Formally,
 
 \[
 0 < Pr(A = a | L = l) < 1, \quad \forall a \in A, \, \forall l \in L \, \text{ such that } \, Pr(L = l) > 0
@@ -600,20 +604,14 @@ where:
 \begin{itemize}
 \tightlist
 \item
-  \(A\) is the treatment or exposure variable.
+  \(A\) denotes the treatment or exposure variable.
 \item
-  \(L\) is a vector of covariates assumed sufficient for satisfying
+  \(L\) denotes a vector of covariates assumed sufficient for satisfying
   conditional exchangeability.
 \end{itemize}
 
-The positivity assumption requires that every individual has a non-zero
-chance of receiving each treatment across all covariates in \(L\)
-(\citeproc{ref-bulbulia2023a}{Bulbulia et al., 2023};
-\citeproc{ref-chatton2020}{Chatton et al., 2020};
-\citeproc{ref-hernan2024WHATIF}{Hernan \& Robins, 2024};
-\citeproc{ref-westreich2010}{Westreich \& Cole, 2010}). For a discussion
-of causal assumptions in relation to external validity, refer to Imai et
-al. (\citeproc{ref-imai2008misunderstandings}{2008}).
+For a discussion of causal assumptions in relation to external validity,
+refer to Imai et al. (\citeproc{ref-imai2008misunderstandings}{2008}).
 
 \subsubsection{Terminology}\label{terminology}
 
@@ -821,8 +819,8 @@ materials \textbf{S1} for a causal inference glossary.
   \textbf{\(\mathbf{\mathcal{R}}\)}: Denotes randomisation to treatment
   condition \(\big(\mathcal{R} \rightarrow A\big)\).
 \item
-  \textbf{Node}: Represents characteristics or features of units within
-  a population on a causal diagram --- that is, a `variable'. In causal
+  \textbf{Node}: denotes characteristics or features of units within a
+  population on a causal diagram --- that is, a `variable'. In causal
   directed acyclic graphs, nodes are drawn with respect to the
   \emph{target population}, which is the population for whom
   investigators seek causal inferences (\citeproc{ref-suzuki2020}{Suzuki
@@ -1075,13 +1073,13 @@ randomised, uncorrelated and undirected errors will generally not
 introduce bias \emph{under the sharp null of no treatment effect for any
 unit} when all backdoor paths are closed. However, if confounders are
 measured without error this may open a backdoor path from treatment to
-outcome. For example,
-(\citeproc{ref-robins2004effects}{\textbf{robins2004effects?}}) p.2216
-discusses how in non-experimental settings, mismeasured confounders can
-introduce bias even when the measurement errors of the treatment and
-outcome are uncorrelated and undirected and there is no treatment
-effect. This is because mismeasured confounders will not control for
-confounding bias. We present an illustration of this bias in
+outcome. For example, Robins \& Hernan
+(\citeproc{ref-robins2008estimation}{2008}) p.2216 discusses how in
+non-experimental settings, mismeasured confounders can introduce bias
+even when the measurement errors of the treatment and outcome are
+uncorrelated and undirected and there is no treatment effect. This is
+because mismeasured confounders will not control for confounding bias.
+We present an illustration of this bias in
 Table~\ref{tbl-terminologyselectionrestrictionbaseline}
 \(\mathcal{G}_6\), where we discuss challenges to comparative research
 in which the accuracy of confounder measurements varies across the sites
@@ -2128,49 +2126,53 @@ al. (\citeproc{ref-schimmelpfennig2024moderating}{2024}).
 
 \subsection{Conclusions}\label{conclusions}
 
-In causal inference, we begin by specifying clearly defined treatments
-and outcomes, stating the contrasts to be made for interventions at
-specific levels of treatment, and identifying a target population for
-whom results generalise. Although causal inference is gaining
-popularity, much work remains in considering its relevance to evaluating
-common threats posed by measurement error bias and target
-population-restriction bias to causal inferences. These threats are
-particularly evident in the comparative human sciences, where both
-incongruent measurements and incongruent human realities may imperil
-causal inferences. Moreover, we have considered how biases arising from
-target-population restriction at the beginning and end of a study may be
-approached as varieties of measurement-error bias. Furthermore, using
-Single World Intervention Graphs (SWIGs), we have clarified that
-structural features of uncorrelated and undirected measurement error
-bias arise either because treatment reporters are the common effects of
-unmeasured treatments and (typically) unmeasured sources of treatment
-measurement error, or because there is effect modification of the
-unmeasured sources of measurement error on reporters of outcomes.
-Lacking structural assumptions, statistical tests will not detect these
-biases. However, it may be possible to correct for these biases, again
-under structural assumptions that we do not obtain from the data alone,
-see supplementary materials \textbf{S2} and \textbf{S5}.
+In causal inference, we start by clearly defining treatments and
+outcomes and specifying contrasts for hypothetical interventions on a
+specific scale (such as the additive scale) across a well-defined target
+population. We then evaluate the prospects for identifying these causal
+effect estimates on the \textbf{full data} --- the entire counterfactual
+dataset where the population is simultaneously observed under each
+intervention to be contrasted. Obtaining valid contrasts requires that
+we consider sources of measurement error, and target population
+restriction bias (also known as `selection bias') -- biases that may
+arise in the absence of confounding by a common cause of the treatment
+and outcome. Although causal inference is gaining popularity, there is
+considerable scope to improve habits of reflecting on the threats to
+valid inference that measurement error bias and target
+population-restriction bias present. We have considered how these
+threats become evident in the comparative human sciences, and
+furthermore, how target population-restriction biases often take the
+form of measurement error bias. Although Single World Intervention
+Graphs (SWIGs) were developed to evaluate the conditional
+exchangeability assumption, they also clarify the diagnosis of
+structural sources of measurement error bias. We have considered more
+generally that lacking structural assumptions -- that is causal
+assumptions -- statistical tests alone are insufficient for diagnosing
+the implications of measurement error biases, which may be directed,
+correlated, both directed and correlated, or undirected and
+uncorrelated. Whether and how we may correct for measurement-error
+biases requires structural assumptions that we do not obtain from the
+data alone, refer to supplementary materials \textbf{S2} and
+\textbf{S5}.
 
 Nothing I have said here should detract from the importance of seeking
 species-level knowledge. We should seek such knowledge. Science should
 seek generalisations where it can because generalisation is knowledge.
 In my view, there are also ethical reasons -- a great many populations
-remain understudied. However, before investigators venture into the vast
-wildernesses of human existence, locally-understood gardens must be
-cultivated. A long shadow of measurement error bias casts its shade over
-nearly every aspect of the human condition that scientists hope to
-understand. Not that such problems remain even if adequate samples are
-taken from truly global populations (a problem discussed in
-\citeproc{ref-ghai2024big}{Ghai et al., 2024}). However, the standard
-workflow for causal inference offers guidance for research design,
-whether or not the causal questions are comparative because causality
-itself is inescapably general.
-
-\subsubsection{Schematic Workflow For Avoiding weird Causal
-Inferences}\label{schematic-workflow-for-avoiding-weird-causal-inferences}
-
-We avoid \textbf{weird} (\textbf{w}rongly \textbf{e}stimated inferences
-due to \textbf{i}nappropriate \textbf{r}estriction and
+remain understudied; where there are no scientific reasons for
+restriction, where a valid target population can be stated for a
+cross-cultural sample, and where costs permit, we should seek wider
+samples. Here, we have considered that problems of measurement-error
+bias remain even if adequate samples are taken from broader populations.
+To put the point metaphorically, before investigators venture into the
+vast wildernesses of human existence, locally-understood gardens of
+human existence must be cultivated. Because a long shadow of measurement
+error bias casts its shade over nearly every aspect of the human
+condition that scientists hope to understand, locally-understood gardens
+of human existence remain largely uncultivated. The good news is that
+standard workflows for causal inference offer investigators generic
+guidance. We avoid \textbf{weird} (\textbf{w}rongly \textbf{e}stimated
+inferences due to \textbf{i}nappropriate \textbf{r}estriction and
 \textbf{d}istortion) inferences in comparative research in the same way
 that we avoid \textbf{weird} inferences in any research by undertaking
 the following steps:
@@ -2182,9 +2184,9 @@ the following steps:
   \textbf{State a well-defined intervention.}
 \end{enumerate}
 
-Clearly define the treatment or exposure to be evaluated. Of which
-events do we hope to infer consequences? Which levels of intervention
-will be compared?
+Clearly define the treatment or exposure to be evaluated. For which
+exposures do we hope to infer consequences? Which levels of the exposure
+shall we compare? Why these levels and not others?
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -2195,8 +2197,9 @@ will be compared?
 \end{enumerate}
 
 Clearly define the outcome to be evaluated. Which consequences are of
-interest? Which comparisons will be made? At which time scale are we
-interested? At which scale of causal contrast are we interested?
+interest? Which comparisons will be made? At which time scale following
+exposure are we interested in evaluating outcomes? At which scale of
+causal contrast are we interested?
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -2206,9 +2209,11 @@ interested? At which scale of causal contrast are we interested?
   \textbf{Clarify the target population.}
 \end{enumerate}
 
-Define the population to whom the results will generalise, understanding
-that causal contrasts may differ for different populations, even in the
-absence of confounding or measurement error biases.
+Use eligibility criteria to define the population to whom the results
+are meant to generalise, understanding that causal contrasts may differ
+for different populations, even in the absence of confounding or
+measurement error biases (\citeproc{ref-hernan2016}{Hernán et al.,
+2016}).
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -2219,7 +2224,9 @@ absence of confounding or measurement error biases.
 \end{enumerate}
 
 Verify that the treatments correspond to interpretable interventions
-(\citeproc{ref-hernan2024WHATIF}{Hernan \& Robins, 2024})
+(\citeproc{ref-hernan2024WHATIF}{Hernan \& Robins, 2024}). Satisfying
+the causal consistency assumption is a necesary condition for valid
+causal inference.
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -2231,9 +2238,11 @@ Verify that the treatments correspond to interpretable interventions
 \end{enumerate}
 
 Balancing confounding covariates across treatment levels ensures that
-differences between groups are conditionally `ignorable', or
-equivalently, are conditionally exchangeable, or equivalently, that all
-backdoor paths have been closed.
+differences between groups are `ignorable', or equivalently, are
+conditionally exchangeable, or equivalently, that all backdoor paths
+have been closed, or equivalently that the treatment and outcome are
+d-separated. Ensuring that confounders are balanced in the treatments to
+be compared is a necessary condition for valid causal inference.
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -2243,8 +2252,10 @@ backdoor paths have been closed.
   \textbf{Check if the positivity assumption is satisfied.}
 \end{enumerate}
 
-Confirm that all individuals have a non-zero probability of receiving
-each treatment level, given their covariates.
+Confirm that all individuals in the target population have a non-zero
+probability of receiving each treatment level, given their covariates.
+Satisfying the positivity assumption is a necesary condition for valid
+causal inference.
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -2256,25 +2267,27 @@ each treatment level, given their covariates.
 \end{enumerate}
 
 Ensure that the data collected and the measures used directly relate to
-the research question. As part of this, evaluate structural features of
-measurement error bias. As we have considered, there are manifold
-possibilities for measurement error bias to obscure the phenomena under
-study, and these biases may interact with target-population-restriction
-biases.
+the research question to hand. As part of this, evaluate structural
+features of measurement error bias. As we have considered, there are
+manifold possibilities for measurement error bias to obscure the
+phenomena under study and bias results. For example
+target-population-restriction biases manifest as measurement error
+biases where inferences for the analytic sample population differ from
+inferences for the target population.
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \setcounter{enumi}{7}
 \tightlist
 \item
-  \textbf{Consider strategies to ensure the study group measured at the
-  end of the study represents the target population.}
+  \textbf{Consider strategies to ensure the analytic sample measured at
+  the end of the study represents the target population.}
 \end{enumerate}
 
-If the study population at both the beginning and end of treatment
-differs in the distribution of variables that modify the effect of a
-treatment on the outcome, the study will be biased in at least one
-measure of effect.
+If the distribution of effect modifiers in the study population at the
+end of treatment differs from the distribution of effect modifiers in
+target population, the study will be biased in at least one measure of
+effect.
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -2286,35 +2299,37 @@ measure of effect.
 \end{enumerate}
 
 Provide transparent and thorough documentation of how steps 1-8 have
-been made. This includes detailing the assumptions, methods, and
-decisions. Prepare to conduct and report multiple analyses where
-analytic decisions are ambiguous.
+been made. This includes stating investigator assumptions,
+disagreements, and decisions. Prepare to conduct and report multiple
+analyses where causal assumptions are debated or ambiguous
+(\citeproc{ref-bulbulia2023}{Bulbulia, 2024b}).
 
 We have seen that the demands of following this workflow in comparative
-research are more stringent because measurement error bias must be
-evaluated at every site to be compared. Heterogeneity in measurement
-error can open biasing paths, and the target populations may not be
-easily defined, sampled, or---where the scientific question requires---
-appropriately restricted. Methodologists broadly agree on these points,
-but they can easily forget them. We have shown how workflows for causal
-inference act as essential preflight checklists for ambitious,
-effective, and safe comparative cultural research. These workflows help
-propel science forward without overreaching.
-
-\newpage{}
+research are more stringent because measurement error biases must be
+evaluated at every site to be compared. Correlated and directed
+structures of measurement error bias can distort treatment effect
+estimates for the broader target population. More fundamentally, the
+target population in comparative research may not be easily defined,
+sampled, or, when required by the scientific question, appropriately
+restricted. Methodologists broadly agree on these points but can easily
+forget them (as discussed in \citeproc{ref-ghai2024big}{Ghai et al.,
+2024}). We have shown how workflows for causal inference act as
+essential preflight checklists for ambitious, effective, and safe
+comparative cultural research. These workflows help propel the human
+sciences forward without overreaching.
 
 \subsection{Acknowledgements}\label{acknowledgements}
 
 I am grateful to Dr.~Inkuk Kim for checking previous versions of this
 manuscript and offering feedback, to two anonymous reviewers and the
-editors, to Robert Ross for suggesting references I'd missed, and to
+editors, to Robert Ross for suggesting references I had missed, and to
 Charles Efferson and Ruth Mace, for their constructive feedback.
 
 Any remaining errors are my own.
 
 \subsection{Conflict of Interest}\label{conflict-of-interest}
 
-The author declares no conflicts of interest
+The author declares no conflict of interest.
 
 \subsection{Financial Support}\label{financial-support}
 
@@ -2463,6 +2478,12 @@ diagrams and measurement bias. \emph{American Journal of Epidemiology},
 Hernán, M. A., Robins, J. M., et al. (2017). Per-protocol analyses of
 pragmatic trials. \emph{N Engl J Med}, \emph{377}(14), 1391--1398.
 
+\bibitem[\citeproctext]{ref-hernan2016}
+Hernán, M. A., Sauer, B. C., Hernández-Díaz, S., Platt, R., \& Shrier,
+I. (2016). Specifying a target trial prevents immortal time bias and
+other self-inflicted injuries in observational analyses. \emph{Journal
+of Clinical Epidemiology}, \emph{79}, 70--75.
+
 \bibitem[\citeproctext]{ref-holland1986}
 Holland, P. W. (1986). Statistics and causal inference. \emph{Journal of
 the American Statistical Association}, \emph{81}(396), 945--960.
@@ -2569,6 +2590,11 @@ Learning, {B}ellevue, {W}ashington}.
 Richardson, T. S., \& Rotnitzky, A. (2014). Causal etiology of the
 research of {J}ames {M}. {R}obins. \emph{Statistical Science},
 \emph{29}(4), 459--484.
+
+\bibitem[\citeproctext]{ref-robins2008estimation}
+Robins, J., \& Hernan, M. (2008). Estimation of the causal effects of
+time-varying exposures. \emph{Chapman \& Hall/CRC Handbooks of Modern
+Statistical Methods}, 553--599.
 
 \bibitem[\citeproctext]{ref-rubin1976}
 Rubin, D. B. (1976). Inference and missing data. \emph{Biometrika},
