--- a/manuscripts/24-accepted-ehs/part-4-experiments/part-4-experiments.qmd
+++ b/manuscripts/24-accepted-ehs/part-4-experiments/part-4-experiments.qmd
@@ -44,6 +44,7 @@ execute:
 fontfamily: libertinus
 bibliography: /Users/joseph/GIT/templates/bib/references.bib
 csl: /Users/joseph/GIT/templates/csl/apa-7.csl
+pdf-engine: lualatex
 ---
 
 
